Added files via upload

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     </div>
     <div id="group2" class="parallax__group">
       <div class="parallax__layer parallax__layer--base">
-        <div class="title">Tailored to Your Business</div>
+        <div class="title"></div>
       </div>
       <div class="parallax__layer parallax__layer--back">
         <div class="title">Custom Made Websites</div>
@@ -216,21 +216,21 @@
     </div>
     <div id="group3" class="parallax__group">
       <div class="parallax__layer parallax__layer--fore">
-        <div class="title">Get a Unique Domain Name</div>
+        <div class="title">Tailored to Your Business</div>
       </div>
       <div class="parallax__layer parallax__layer--base">
-        <div class="title">Collect User Data</div>
+        <div class="title"> <div class="title"></div></div>
       </div>
     </div>
     <div id="group4" class="parallax__group">
       <div class="parallax__layer parallax__layer--base">
-        <div class="title">Search Engine Optimization	</div>
+        <div class="title">	</div>
       </div>
       <div class="parallax__layer parallax__layer--back">
-        <div class="title">Get on the first page of Google</div>
+        <div class="title">Get on the First Page of Google</div>
       </div>
       <div class="parallax__layer parallax__layer--deep">
-        <div class="title">Responsive Design</div>
+        <div class="title"></div>
       </div>
     </div>
     <div id="group5" class="parallax__group">
@@ -238,7 +238,7 @@
         <div class="title">Sell Products on Your Site</div>
       </div>
       <div class="parallax__layer parallax__layer--base">
-        <div class="title">Allow Users to Post Reviews</div>
+        <div class="title"></div>
       </div>
     </div>
     <div id="group6" class="parallax__group">
@@ -246,7 +246,7 @@
         <div class="title">Work One-On-One With Experienced Web Designers</div>
       </div>
       <div class="parallax__layer parallax__layer--base">
-        <div class="title">Learn how to Maintain Your Own Site</div>
+        <div class="title"></div>
       </div>
     </div>
     <div id="group7" class="parallax__group">
