--- a/index.html
+++ b/index.html
@@ -131,28 +131,28 @@
     z-index: 5; /* slide over group 2 */
   }
   #group1 .parallax__layer--base {
-    background: #63e192;
+    background: #0690b3;
   }
 
   #group2 {
     z-index: 3; /* slide under groups 1 and 3 */
   }
   #group2 .parallax__layer--back {
-    background: #7bee9a;
+    background: ;
   }
 
   #group3 {
     z-index: 4; /* slide over group 2 and 4 */
   }
   #group3 .parallax__layer--base {
-    background: #c6ffe1;
+    background: #308695;
   }
 
   #group4 {
     z-index: 2; /* slide under group 3 and 5 */
   }
   #group4 .parallax__layer--deep {
-    background: #247e57;
+    background: #007777;
   }
 
   #group5 {
@@ -166,14 +166,14 @@
     z-index: 2; /* slide under group 5 and 7 */
   }
   #group6 .parallax__layer--back {
-    background: #247e57;
+    background: #005175;
   }
 
   #group7 {
     z-index: 3; /* slide over group 7 */
   }
   #group7 .parallax__layer--base {
-    background: #c6ffe1;
+    background: #004c66;
   }
 
 
