--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     left: .5em;
     z-index: 999;
     background: #076739;
-    color: #c6ffe1;
+    color: white;
     padding: .5em;
     border-radius: 0 0 5px 5px;
   }
