--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     top: 0;
     left: .5em;
     z-index: 999;
-    background: #076739;
-    color: white;
+    background: white;
+    color: black;
     padding: .5em;
     border-radius: 0 0 5px 5px;
   }
